# pdm_learn

./: .gitignore  README.md  environment.yml  pyproject.toml
archive/: README.md
artifacts/: README.md
data/: cancer_complexes_clean.xlsx
figures/: README.md
notebooks/: README.md
notebooks/PPI/: Bicor_featureSignificance.ipynb  Density Map PPI.ipynb  MI_featureSignificance.ipynb  Machine Learning PPI.ipynb  Pos_Neg_control.ipynb  data conversion PPI.ipynb  rank_PPI_pairs_cancer.ipynb
notebooks/oncogene/: Machine Learning.ipynb  data conversion (pearson_spearman).ipynb  data conversion.ipynb  trim CCLE inputs.ipynb
notebooks/simulation/: Associations.ipynb  Machine Learning Sim.ipynb  data conversion Sim.ipynb
scripts/: README.md  check_biogrid_matches_controls.py  check_complex_pairs_in_biogrid.py  make_figures.py  make_oncogene_features.py  make_oncogene_trimmed_inputs.py  make_ppi_controls.py  make_ppi_features.py  make_ppi_trimmed_inputs.py  make_simulation_features.py  make_trimmed_inputs.py  refactor_notebooks.py  run_oncogene_predictions.py  run_ppi_predictions.py  run_simulation_benchmarks.py  update_oncogene_notebooks.py
scripts/data/: prepare_trimmed_inputs.py
scripts/figures/: make_figures.py
scripts/generic/: make_features.py  run_predictions.py
scripts/notebooks/: refactor_notebooks.py  update_oncogene_notebooks.py
scripts/oncogene/: make_features.py  run_predictions.py
scripts/ppi/: make_controls.py  make_features.py  (+1 more)
tests/: test_modeling.py  test_oncogene_trimming.py  test_ppi.py  test_preprocessing.py  test_simulation.py
(+15 files in other folders)
